[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimepilot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "cupy-cuda12x",
    "transformers==4.46.2",
    "controlnet-aux==0.0.7",
    "imageio[ffmpeg]",
    "safetensors",
    "einops",
    "sentencepiece",
    "protobuf",
    "ftfy",
    "matplotlib",
    "lpips",
    "pandas",
    "openpyxl",
    "scikit-image",
    "Pillow",
    "huggingface_hub",
    "deepspeed",
    "lightning",
    "gradio",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
